added some i18n changes + allergens color order button

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -9,5 +9,10 @@
         "feedback": "Feedback",
         "thanks": "Thank you",
         "title": "Your meals from the last five days"
+    },
+    "orderLogic": {
+        "order": "order",
+        "ordered": "ordered",
+        "orderLogic.addedToShoppingCart": "Added to your shopping cart!"
     }
 }
