--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -14,5 +14,16 @@
         "order": "order",
         "ordered": "ordered",
         "orderLogic.addedToShoppingCart": "Added to your shopping cart!"
+    },
+    "recommendations": {
+        "explanation": "Please help us by telling us why you dislike this recommendation?"
+        
+    },
+    "done": {
+        "thanks": "Thank you for participating in the PERSFO study today. Your orders are confirmed.",
+        "undo": "Undo your orders of today"
+    },
+    "feedback": {
+        "thanks": "Thank you for providing feedback!"
     }
 }
