important update bug fix

--- a/i18n/nl.i18n.json
+++ b/i18n/nl.i18n.json
@@ -30,7 +30,7 @@
         "no_data": "Geen data",
         "nutrients": "Nutriënten",
         "allergens": "Allergiën",
-        "energy": "Engerie",
+        "energy": "Energie",
         "total_fat": "Totale vetten",
         "saturated_fats": "Verzadigde vetten",
         "sugar": "Suikers",
