--- a/i18n/nl.i18n.json
+++ b/i18n/nl.i18n.json
@@ -42,7 +42,7 @@
         "i_agree": "Ik ga akkoord",
         "continue": "Verder",
         "back": "Terug",
-        "home": "Menu's"
+        "home": "Maaltijden"
     },
     "errors": {
         "no_ingredients": "Er zijn voor deze maaltijd nog geen ingrediënten gekend"
