--- a/i18n/nl.i18n.json
+++ b/i18n/nl.i18n.json
@@ -77,6 +77,7 @@
         "already_an_account": "Heeft u al een account? Aanmelden",
         "not_already_an_account": "Nog geen account? Registreer",
         "incorrect_username_or_token": "Onjuiste gebruikersnaam of token!",
+        "incorrect_username_or_password": "Onjuiste gebruikersnaam of wachtwoord!",
         "sign_in": "Aanmelden",
         "warning": "Om uw anonimiteit te garanderen, gebruikt u best geen herkenbare aanmeldnaam."
     },
