new rules based on dieticians

--- a/i18n/nl.i18n.json
+++ b/i18n/nl.i18n.json
@@ -159,6 +159,7 @@
         "Calcium": "Calcium",
         "Iron": "Ijzer",
         "SaturatedFats": "Verzadigd vet",
+        "Carbohydrate": "Koolhydraten",
         "explanation": "Op basis van de 'Food Frequency Vragenlijst' konden we een persoonlijk plan opstellen. Jouw persoonlijke aanbevelingen tellen voor 65% mee bij het bepalen van je aanbevolen maaltijd."
     }
 }
